Data/error_output_cj.txt
clang++ -g -std=c++14 ./Code/lib_job_system/samplecode/*.cpp -o automated
./Code/lib_job_system/samplecode/animal.cpp:1:10: fatal error: 'string' file not found
    1 | #include <string>
      |          ^~~~~~~~
1 error generated.
In file included from ./Code/lib_job_system/samplecode/cat.cpp:1:
./Code/lib_job_system/samplecode/cat.h:1:10: fatal error: 'string' file not found
    1 | #include <string>
      |          ^~~~~~~~
1 error generated.
./Code/lib_job_system/samplecode/syntaxerror.cpp:1:19: error: expected '>'
    1 | #include <iostream
      |                   ^
./Code/lib_job_system/samplecode/syntaxerror.cpp:1:10: note: to match this '<'
    1 | #include <iostream
      |          ^
./Code/lib_job_system/samplecode/syntaxerror.cpp:2:10: fatal error: 'String' file not found
    2 | #include <String>
      |          ^~~~~~~~
2 errors generated.
make: *** [automated] Error 1
